# SaltEngine

./: .gitignore  Cargo.toml  doodle.excalidraw  notes.md
cards/: Cargo.toml
cards/src/: attack_dog.rs  emotional_support_dog.rs  fraidy_cat.rs  grandma_the_soother.rs  indoor_cat.rs  lib.rs  outdoor_cat.rs  pawn.rs  popcorn_vendor.rs  priest_of_the_lowland.rs  really_big_rock.rs  rickety_cannon.rs  sleeping_dog.rs
client/: Cargo.toml
client/src/: console_agent.rs  lib.rs  main.rs
console_client/: Cargo.toml
console_client/src/: console_agent.rs  console_display.rs  local_state.rs  main.rs
derive_id_macro/: Cargo.toml
engine/: Cargo.toml
engine/src/: card.rs  console_display.rs  deck.rs  dispatcher.rs  event.rs  game_agent.rs  game_client.rs  game_runner.rs  game_state.rs  hand.rs  id.rs  lib.rs  notes.md  player_id.rs
engine/src/game_agent/: console_agent.rs  game_agent.rs  mod.rs
engine/src/game_logic/: buff.rs  cards.rs  event_dispatch.rs  event_handlers.rs  events.rs  keywords.rs  mod.rs  passive_effect.rs
engine/src/game_logic/cards/: attack_dog.rs  emotional_support_dog.rs  fraidy_cat.rs  outdoor_cat.rs  pawn.rs  popcorn_vendor.rs  priest_of_the_lowland.rs  really_big_rock.rs  rickety_cannon.rs  sleeping_dog.rs
engine/src/game_logic/event_handlers/: add_buff_to_card_instance_handler.rs  add_card_to_hand_event_handler.rs  attack_event_handler.rs  creature_deals_damage_handler.rs  creature_destroyed_handler.rs  creature_healed_event_handler.rs  creature_set_event_handler.rs  creature_takes_damage_handler.rs  draw_card_event_handler.rs  end_turn_event_handler.rs  player_gain_mana_event_handler.rs  player_spend_mana_event_handler.rs  pos_takes_damage_event_handler.rs  start_game_event_handler.rs  summon_creature_from_hand_event_handler.rs  turn_start_event_handler.rs
engine/src/game_logic/events/: add_buff_to_card_instance_event.rs  add_card_to_hand_event.rs  attack.rs  creature_deals_damage_event.rs  creature_destroyed.rs  creature_healed_event.rs  creature_set_event.rs  creature_takes_damage_event.rs  draw_card.rs  end_turn.rs  player_gain_mana.rs  player_spend_mana.rs  pos_takes_damage_event.rs  start_game_event.rs  summon_creature_from_hand_event.rs  turn_start_event.rs
engine/src/game_state/: board.rs  card_in_deck_entity.rs  card_in_hand_entity.rs  card_instance.rs  creature_definition.rs  creature_instance.rs  deck.rs  game_state.rs  game_state_2.rs  game_state_old.rs  hand.rs  hand_old.rs  hero.rs  mod.rs  selector.rs
engine/src/v2/: mod.rs
entity_arena/: Cargo.toml
entity_arena/isentity_macro_derive/: Cargo.toml
entity_arena/isentity_macro_derive/src/: lib.rs
entity_arena/src/: entity.rs  id.rs  lib.rs  state.rs
events/: Cargo.toml
events/src/: creature_attacks_target_event.rs  creature_destroyed_event.rs  creature_placed_on_board_event.rs  creature_takes_damage_event.rs  draw_card_event.rs  gain_mana_event.rs  lib.rs  player_end_turn_event.rs  player_start_turn_event.rs  player_summons_creature_event.rs  start_game_event.rs
game_client/: Cargo.toml
game_runner/: Cargo.toml
game_state/: Cargo.toml
game_state/src/: entity.rs  id.rs  lib.rs  state.rs
id/: Cargo.toml
id/id_macro/: Cargo.toml
id/id_macro/src/: lib.rs
id/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: from_client.rs  from_server.rs  full_state.rs  lib.rs
protocol/src/client_actions/: attack.rs  end_turn.rs  mod.rs  summon_creature_from_hand.rs
protocol/src/client_event_views/: card_added_to_hand.rs  creature_summoned_from_hand.rs  player_gain_mana.rs  turn_ended.rs
protocol/src/entities/: board.rs  buff.rs  hand.rs  hero.rs  hideable.rs  id.rs  mod.rs  passive_effect.rs  player.rs  unit_card_definition.rs  unit_card_instance_view.rs
protocol/src/visual_events/: card_added_to_hand.rs  creature_attacks_target.rs  creature_set_on_board.rs  mod.rs  player_spend_mana.rs  turn_started.rs
server/: Cargo.toml
server/src/: connection.rs  lib.rs  main.rs  matchmaker.rs  matchmaking_queue.rs  messages.rs  network_client_notifier.rs  network_game_client.rs  network_prompter.rs  play_game.rs  websocker_server.rs  websocket_server.rs
src/: console_display.rs  game_runner.rs  id.rs  main.rs  notes.md
src/game_agent/: console_agent.rs  game_agent.rs
src/game_logic/: buff.rs  card_definition.rs  cards.rs  event.rs  event_dispatch.rs  event_handler.rs  event_handlers.rs  events.rs  game_event.rs  is.rs  mod.rs  passive_effect.rs
src/game_logic/cards/: attack_dog.rs  emotional_support_dog.rs  indoor_cat.rs  mod.rs  popcorn_vendor.rs  prawn.rs  priest_of_the_lowland.rs  really_big_rock.rs  rickety_cannon.rs  sleeping_dog.rs
src/game_logic/event_handlers/: add_card_to_hand_event_handler.rs  attack_event_handler.rs  creature_deals_damage_handler.rs  creature_destroyed_handler.rs  creature_set_event_handler.rs  creature_takes_damage_handler.rs  draw_card_event_handler.rs  end_turn_event_handler.rs  mod.rs  player_gain_mana_event_handler.rs  player_spend_mana_event_handler.rs  pos_takes_damage_event_handler.rs  prompt_player_event_handler.rs  (+4 more)
src/game_state/: board.rs  card_instance.rs  deck.rs  game_state.rs  hand.rs  hero.rs  mod.rs  selector.rs
tests/: Cargo.toml
tests/src/: lib.rs
webclient/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
webclient/src/: animations.ts  attack.ts  boardslot.ts  hand.ts  index.html  js.js  js.ts  message.ts  package-lock.json  package.json  setup.ts  style.css  tsconfig.json  util.ts  webpack.config.js
websocket_client/: Cargo.toml
websocket_client/src/: lib.rs  local_state.rs
websocket_console_client/: Cargo.toml
websocket_console_client/src/: main.rs  websocket_channel.rs  websocket_receiver.rs
websocket_server/: Cargo.toml
websocket_server/src/: connection.rs  lib.rs  main.rs  matchmaker.rs  messages.rs  network_client_notifier.rs  network_game_client.rs  network_prompter.rs  play_game.rs  websocket_player.rs  websocket_server.rs
(+23 files in other folders)
