[package]
name = "client"
version = "0.1.0"
authors = ["andy <andysalerno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salt_engine = { path = "../engine" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }