[package]
name = "client"
version = "0.1.0"
authors = ["andy <andysalerno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
salt_engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = { version = "0.13.0", features = ["async-std-runtime"] }
smol = "1.2.5"
futures = "0.3"
log = "0.4.0"
env_logger = "0.8.3"