[package]
name = "console_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
salt_engine = { path = "../engine" }
websocket_client = { path = "../websocket_client" }
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
smol = "1.2.5"