[package]
name = "salt_engine"
version = "0.1.0"
authors = ["andy salerno <andysalerno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.9.1"
serde_json = "1.0"