[package]
name = "salt_engine"
version = "0.1.0"
authors = ["andy salerno <andysalerno@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
smol = "1.2.5"
futures = "0.3"
enum_dispatch = "0.3.7"
protocol = { path = "../protocol" }
entity_arena = { path = "../entity_arena" }
isentity_macro_derive = { path = "../entity_arena/isentity_macro_derive" }

[dev-dependencies]
mockall = "0.10.2"
serde_json = "1.0"
env_logger = "0.9.0"