[package]
name = "server"
version = "0.1.0"
authors = ["andy <andysalerno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salt_engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = "0.13.0"
smol = "1.2.5"
futures = "0.3"
async-trait = "0.1.48"
log = "0.4.0"
env_logger = "0.8.3"