[package]
name = "websocket_client"
version = "0.1.0"
authors = ["andy <andysalerno@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket_server = { path = "../websocket_server" }
salt_engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = { version = "0.13", features = ["async-std-runtime"] }
smol = "1.2.5"
log = "0.4"