[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
events = { path = "../events" }
log = "0.4"
env_logger = "0.9.0"
tungstenite = "0.17"
